@@ -1,1 +1,1 @@
-COMMONSRC =  ../src/globals.cpp ../src/calendar.cpp ../src/callbacks.cpp ../src/clock.cpp ../src/desktopSwitcher.cpp ../src/launchers.cpp ../src/taskBar.cpp ../src/slider.cpp ../src/main.cpp
+COMMONSRC = ../src/calendar.cpp ../src/callbacks.cpp ../src/clock.cpp ../src/desktopSwitcher.cpp ../src/globals.cpp ../src/launchers.cpp ../src/main.cpp ../src/slider.cpp ../src/taskBar.cpp
