@@ -1,3 +1,4 @@
+#ACLOCAL_AMFLAGS = "-I m4"
 AUTOMAKE_OPTIONS = subdir-objects
 
 include ../flagsandlibs
