@@ -1,4 +1,5 @@
 
+
 m4_define([LFSTOOLKIT_MAJ_N],[0])
 m4_define([LFSTOOLKIT_MIN_N],[6])
 m4_define([LFSTOOLKIT_REV_N],[1])
@@ -11,10 +12,11 @@ AC_INIT([LFSToolKit],[LFSTOOLKIT_MAJ_N.LFSTOOLKIT_MIN_N.LFSTOOLKIT_REV_N],[PROJ]
 AC_CONFIG_HEADERS([config.h])
 AC_PROG_CXX
 #AC_CONFIG_MACRO_DIRS()
+AC_CONFIG_MACRO_DIRS([m4])
 
 AM_INIT_AUTOMAKE
 
-AC_PROG_CC
+#AC_PROG_CC
 
 LT_INIT([disable-static])
 
