@@ -1,6 +1,4 @@
 
 SUBDIRS = LFSWM2/app
 
-remake:
-	$(shell ./remakesourcelist)
 
