@@ -1,4 +1,5 @@
 0.2.0
+Better display of transparent BG image.
 Added optional background image to dock.
 Fixed finding desktop files.
 Minor fix for launchers.
